fix: remove extra margin on desktop

--- a/Nour Adhkar/src/assets/css/style.css
+++ b/Nour Adhkar/src/assets/css/style.css
@@ -341,4 +341,8 @@ header h1 {
     .container {
         padding: 16px 0;
     }
+
+    .modal-container {
+        margin: 16px auto;
+    }
 }
